; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_stallion.c_stl_cd_change.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_stallion.c_stl_cd_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stlport = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.tty_struct = type { i32 }

@TIOCM_CD = common dso_local global i32 0, align 4
@ASYNC_CHECK_CD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stlport*)* @stl_cd_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stl_cd_change(%struct.stlport* %0) #0 {
  %2 = alloca %struct.stlport*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.tty_struct*, align 8
  store %struct.stlport* %0, %struct.stlport** %2, align 8
  %5 = load %struct.stlport*, %struct.stlport** %2, align 8
  %6 = getelementptr inbounds %struct.stlport, %struct.stlport* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %3, align 4
  %8 = load %struct.stlport*, %struct.stlport** %2, align 8
  %9 = getelementptr inbounds %struct.stlport, %struct.stlport* %8, i32 0, i32 1
  %10 = call %struct.tty_struct* @tty_port_tty_get(%struct.TYPE_2__* %9)
  store %struct.tty_struct* %10, %struct.tty_struct** %4, align 8
  %11 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %12 = icmp ne %struct.tty_struct* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  br label %62

14:                                               ; preds = %1
  %15 = load %struct.stlport*, %struct.stlport** %2, align 8
  %16 = call i32 @stl_getsignals(%struct.stlport* %15)
  %17 = load %struct.stlport*, %struct.stlport** %2, align 8
  %18 = getelementptr inbounds %struct.stlport, %struct.stlport* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.stlport*, %struct.stlport** %2, align 8
  %20 = getelementptr inbounds %struct.stlport, %struct.stlport* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @TIOCM_CD, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %35

25:                                               ; preds = %14
  %26 = load i32, i32* %3, align 4
  %27 = load i32, i32* @TIOCM_CD, align 4
  %28 = and i32 %26, %27
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %25
  %31 = load %struct.stlport*, %struct.stlport** %2, align 8
  %32 = getelementptr inbounds %struct.stlport, %struct.stlport* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = call i32 @wake_up_interruptible(i32* %33)
  br label %35

35:                                               ; preds = %30, %25, %14
  %36 = load i32, i32* %3, align 4
  %37 = load i32, i32* @TIOCM_CD, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %59

40:                                               ; preds = %35
  %41 = load %struct.stlport*, %struct.stlport** %2, align 8
  %42 = getelementptr inbounds %struct.stlport, %struct.stlport* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* @TIOCM_CD, align 4
  %45 = and i32 %43, %44
  %46 = icmp eq i32 %45, 0
  br i1 %46, label %47, label %59

47:                                               ; preds = %40
  %48 = load %struct.stlport*, %struct.stlport** %2, align 8
  %49 = getelementptr inbounds %struct.stlport, %struct.stlport* %48, i32 0, i32 1
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* @ASYNC_CHECK_CD, align 4
  %53 = and i32 %51, %52
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %58

55:                                               ; preds = %47
  %56 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %57 = call i32 @tty_hangup(%struct.tty_struct* %56)
  br label %58

58:                                               ; preds = %55, %47
  br label %59

59:                                               ; preds = %58, %40, %35
  %60 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %61 = call i32 @tty_kref_put(%struct.tty_struct* %60)
  br label %62

62:                                               ; preds = %59, %13
  ret void
}

declare dso_local %struct.tty_struct* @tty_port_tty_get(%struct.TYPE_2__*) #1

declare dso_local i32 @stl_getsignals(%struct.stlport*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1

declare dso_local i32 @tty_hangup(%struct.tty_struct*) #1

declare dso_local i32 @tty_kref_put(%struct.tty_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
